Add listings package settings

--- a/.vim/template/template.tex
+++ b/.vim/template/template.tex
@@ -17,6 +17,18 @@
 \usepackage{url}
 \usepackage{comment}
 \usepackage{subfigure}
+\usepackage{listings}
+\lstset{% general command to set parameter(s)
+  language={C},
+  basicstyle=\ttfamily\scriptsize, % print whole listing small
+  keywordstyle=\color{black}\bfseries, % underlined bold black keywords
+  identifierstyle=, % nothing happens
+  commentstyle=\color{white}, % white comments
+  stringstyle=\ttfamily, % typewriter type for strings
+  showstringspaces=false, % no special string spaces
+  breaklines=true,
+  frame={tb}
+}
 
 \title{}
 \author{}
